Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9235

Intermittent assertion failure 'Heap->u.FreeListsInUseBytes[Index] & Bit' in services_winetest:service

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 0.4.0
    • Services
    • None

    Description

      Assertion 'Heap->u.FreeListsInUseBytes[Index] & Bit' failed at /srv/buildbot_cmake/full_cmake/build/lib/rtl/heap.c line 242

      https://reactos.org/sites/all/modules/reactos/testman/detail.php?id=19275052&prev=0

      This is most likely to be a bug in services.exe or rpcrt4.dll, or maybe advapi32.dll.
      Haven't been able to reproduce it on MSVC with DPH so far.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: